src/app.css
/* ... */
@font-face {
        font-family: "Permanent Marker";
        font-style: normal;
        font-display: swap;
        font-weight: 400;
        src: local("Permanent Marker Regular"), local("PermanentMarker-Regular"),
                url(fonts/PermanentMarker/Fh4uPib9Iyv2ucM6pGQMWimMp004La2Cfw.woff2)
                        format("woff2");
        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6,
                U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
                U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

html,
body {
        margin: 0;
        padding: 0;
        transition: background-color 1s;
        width: 100%;
        height: 100%;
        text-align: center;
        position: relative;
        font-size: 1.5rem;
        color: #fff;
}

body.normal {
        background-color: #19cf85;
}

body.about {
        background-color: #272b30;
}

body.normal .container1 {
        display: block;
        opacity: 1;
        visibility: visible;
}

body.normal .container2 {
        display: none;
        opacity: 0;
        visibility: hidden;
}

body.about .container1 {
        display: none;
        opacity: 0;
        visibility: hidden;
}

body.about .container2 {
        display: block;
        opacity: 1;
        visibility: visible;
}

body.about .back-button {
        display: block;
        opacity: 1;
}

.swapper {
        cursor: pointer;
}

.hidden {
        display: none;
}

.container1 header {
        font-family: "Permanent Marker", cursive;
        font-size: 2rem;
}
.container1 {
        width: 85%;
        margin: auto;
        margin-bottom: 2rem;
        font-family: monospace;
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        max-width: 530px;
        opacity: 1;
        transition: opacity 1s, visibility 1s;
}
.container1 p {
        line-height: 1.6rem;
}
.container1 a {
        color: #fff;
        text-decoration: none;
}

.container1 img {
        max-width: 100%;
        border-radius: 50%;
        border: 3px solid #fff;
}

audio {
        display: none;
}

#pagespeed {
        display: none;
}

.pagespeed-screenshot-img {
        max-width: 100%;
}

.pagespeed-container {
        position: fixed;
        bottom: 20px;
        right: 10px;
        width: 32px;
        height: 32px;
        z-index: 9;
}

.pagespeed {
        cursor: pointer;
        font-size: 32px;
        color: #fff;
        text-decoration: none;
        transition: color 1s;
}

.pagespeed:hover {
        color: #ff3;
}

.back-button-container {
        position: fixed;
        top: 10px;
        left: 10px;
        width: 32px;
        height: 32px;
        z-index: 9;
}

.back-button {
        display: none;
        opacity: 0;
        transition: opacity 1s;
        cursor: pointer;
        font-size: 32px;
}

.speaker-container {
        position: fixed;
        top: 10px;
        right: 10px;
        width: 30px;
        height: 30px;
        z-index: 9;
}
.speaker {
        height: 30px;
        width: 30px;
        position: relative;
        overflow: hidden;
        display: inline-block;
        cursor: pointer;
}
.speaker span {
        display: block;
        width: 8px;
        height: 8px;
        background: #fff;
        margin: 11px 0 0 2px;
}
.speaker span:after {
        content: "";
        position: absolute;
        width: 0;
        height: 0;
        border-style: solid;
        border-color: transparent #fff transparent transparent;
        border-width: 10px 14px 10px 15px;
        left: -13px;
        top: 5px;
}
.speaker span:before {
        transform: rotate(45deg);
        border-radius: 0 50px 0 0;
        content: "";
        position: absolute;
        width: 5px;
        height: 5px;
        border-style: double;
        border-color: #fff;
        border-width: 7px 7px 0 0;
        left: 18px;
        top: 9px;
        transition: all 0.2s ease-out;
}
.speaker:hover span:before {
        transform: scale(0.8) translate(-3px, 0) rotate(42deg);
}
.speaker.mute span:before {
        transform: scale(0.5) translate(-15px, 0) rotate(36deg);
        opacity: 0;
}
.get-in-touch .divider {
        height: 1px;
        width: 22px;
        display: inline-block;
}
@media (max-width: 420px) {
        .container1 i.fas,
        .container1 i.fab,
        .container1 i.far {
                font-size: 0.8rem;
        }
        .container1 .get-in-touch .divider {
                display: block;
                width: 100%;
        }
}
.container1 i.fas:hover,
.container1 i.fab:hover,
.container1 i.far:hover {
        color: #444;
}
.container2 {
        position: relative;
        width: 85%;
        margin: auto;
        margin-bottom: 2rem;
        font-family: "Nanum Pen Script", cursive;
        opacity: 0;
        visibility: hidden;
        transition: opacity 1s, visibility 1s;
}

@media (min-width: 650px) {
        .container2 {
                position: absolute;
                top: 50%;
                left: 50%;
                transform: translate(-50%, -50%);
                max-width: 530px;
        }
}
.container2 p {
        line-height: 1.6rem;
}
.container2 a {
        color: #fff;
        text-decoration: none;
        border-bottom: 1px dashed;
        display: inline-block;
        height: 1.4rem;
}
.container2 a:hover {
        border-bottom: 0 none;
}
.container2 .grey {
        color: #aaa;
        border-color: #aaa;
}
.container2 .gitlab-purple {
        color: #575d88;
        border-color: #575d88;
}
.container2 .red {
        color: #ff6188;
        border-color: #ff6188;
}
.container2 .orange {
        color: #fc9867;
        border-color: #fc9867;
}
.container2 .yellow {
        color: #ffd866;
        border-color: #ffd866;
}
.container2 .poisonousgreen {
        color: #19cf85;
        border-color: #19cf85;
}
.container2 .green {
        color: #a9dc76;
        border-color: #a9dc76;
}
/* ... */

